# ms-product/src/main/java/com/nttdata/banco/persistence/entity/Customer.java
@@ -1,0 +1,5 @@
+package com.nttdata.banco.persistence.entity;
+
+public class Customer {
+
+}
